feat:change dataset path

--- a/configs/train-flickr2k/train_flickr2k_softmax.yaml
+++ b/configs/train-flickr2k/train_flickr2k_softmax.yaml
@@ -2,8 +2,8 @@ train_dataset:
   dataset:
     name: image-folder
     args:
-      root_path: ./load/div2k/DIV2K_train_HR
-      repeat: 20
+      root_path: ./load/mix_train_HR
+      repeat: 5
       cache: in_memory
   wrapper:
     name: sr-implicit-downsampled
